# multmodal_rag_dev

./: README.md  database.py
client/: .gitignore  README.md  main.py  package-lock.json  package.json
references/: architecture.txt  document uploads3.txt  env.txt  todo  (+9 more)
server/: .gitignore  Dockerfile  MakeFile  README.md  auth.py  cors.json  database.py  diagnose.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start_server.bat  stop_server.bat  tasks.py  test.py
server/evaluation/: ragas_experimentation.ipynb
server/notebooks/: simple_agent.ipynb
server/old_code/: auth.py  download_model.py  main.py  tasks.py
server/redis/: docker-compose.yaml
server/routers/: chats.py  files.py  projects.py  users.py
server/src/: server.py
server/src/agents/simple_agent/: agent.py
server/src/agents/supervisor_agent/: agent.py
server/src/config/: index.py  logging.py
server/src/middleware/: logging_middleware.py
server/src/models/: index.py
server/src/rag/ingestion/: index.py  utils.py
server/src/rag/retrieval/: index.py  utils.py
server/src/routers/: files.py  projects.py
server/src/routes/: chatRoutes.py  projectFilesRoutes.py  projectRoutes.py  userRoutes.py
server/src/services/: awsS3.py  celery.py  llm.py  supabase.py
server/src/utils/: index.py
server/supabase/: config.toml
server/supabase/migrations/: 20260322183027_initial_schema.sql  20260429065908_chunk_search_functions.sql
server/supabase/snippets/: Untitled query 100.sql  Untitled query 365.sql  Untitled query 481.sql  Untitled query 782.sql  Untitled query 817.sql
(+34 files in other folders)
